--- a/app/src/main/res/layout-pl-rPL/fragment_ambulance_break.xml
+++ b/app/src/main/res/layout-pl-rPL/fragment_ambulance_break.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/ambulance_break"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
         android:textColor="@color/green_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,21 +20,22 @@
         android:id="@+id/explaining_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="150dp"
+        android:paddingHorizontal="50dp"
         android:layout_marginTop="3dp"
         android:text="@string/break_explaining_text"
         android:textAlignment="center"
         android:textColor="@color/black"
         style="@style/TextAppearance.MaterialComponents.Headline5"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="630dp"
-        android:layout_height="430dp"
+        android:layout_width="match_parent"
+        android:paddingHorizontal="30dp"
+        android:layout_height="300dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/medic_break2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,8 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/startBreak"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-            android:textSize="32sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -72,8 +72,7 @@
             android:layout_toRightOf="@id/breakButton"
             android:backgroundTint="@color/red"
             android:text="@string/incident_cancel_button"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-            android:textSize="32sp"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
