--- a/app/src/main/res/layout-sw600dp/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paramedic_screen.xml
@@ -255,7 +255,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:textSize="18sp"
-            android:text="Shift"
+            android:text="@string/shift"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
