--- a/app/src/main/res/layout/equipment_item.xml
+++ b/app/src/main/res/layout/equipment_item.xml
@@ -11,9 +11,10 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
-        android:layout_width="440dp"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="3dp"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
@@ -33,19 +34,21 @@
                 android:layout_marginRight="10dp"
                 android:text="@{equipment.item.name}"
                 android:textAppearance="?attr/textAppearanceHeadline5"
-                android:textSize="30sp"
+                android:textSize="26sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+
             <Button
-                android:id="@+id/plus"
-                android:layout_width="60dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="5dp"
-                android:text="+"
-                android:textSize="40sp"
+                android:id="@+id/minus"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:text="-"
+                android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/name"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -54,23 +57,25 @@
                 android:id="@+id/count"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:text=""
-                android:textSize="30sp"
-                android:layout_marginHorizontal="4dp"
+                android:layout_marginHorizontal="2dp"
+                android:gravity="center"
+                android:text="0"
+                android:textSize="28sp"
                 android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/minus"
-                app:layout_constraintStart_toEndOf="@+id/plus"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintBottom_toBottomOf="@+id/minus"
+                app:layout_constraintEnd_toStartOf="@+id/plus"
+                app:layout_constraintStart_toEndOf="@+id/minus"
+                app:layout_constraintTop_toTopOf="@+id/minus" />
 
             <Button
-                android:id="@+id/minus"
-                android:layout_width="60dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="10dp"
-                android:text="-"
-                android:textSize="40sp"
+                android:id="@+id/plus"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center"
+                android:text="+"
+                android:textSize="30sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
