--- a/app/src/main/res/layout-night/fragment_incident.xml
+++ b/app/src/main/res/layout-night/fragment_incident.xml
@@ -117,7 +117,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:clickable="true"
-        android:editable="false"
+        android:focusable="false"
         android:hint="@string/incident_address_hint"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
@@ -131,8 +131,8 @@
             android:id="@+id/locationInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:editable="false"
+            android:clickable="true"
+            android:focusable="false"
             android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 
