--- a/app/src/main/res/layout-sw600dp-night/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout-sw600dp-night/fragment_paramedic_call_for_support.xml
@@ -118,7 +118,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/cancelButton"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
