--- a/app/src/main/res/layout-sw600dp-night/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout-sw600dp-night/fragment_paramedic_screen.xml
@@ -18,7 +18,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="320dp"
+            android:layout_width="420dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:elevation="10dp"
@@ -73,6 +73,7 @@
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     app:layout_constraintStart_toStartOf="@id/day_label"
                     app:layout_constraintTop_toBottomOf="@id/day_label" />
+
 
                 <Button
                     android:id="@+id/checkin_button"
@@ -133,7 +134,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:padding="3dp"
-                    android:text="Car accident"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_type"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_label" />
@@ -154,7 +154,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="00:00"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_time"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_type" />
@@ -172,10 +171,10 @@
 
                 <TextView
                     android:id="@+id/current_emergency_address_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="400dp"
+                    android:layout_height="35dp"
                     android:padding="3dp"
-                    android:text="ul. Złota 42, 00-001 Warszawa"
+                    android:scrollbars="horizontal"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_address"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_time" />
@@ -196,7 +195,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="3 People"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_victims"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_address_text" />
@@ -217,7 +215,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="Breathing, Not concsious"
                     android:textSize="22sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_victim_state"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_victims_text" />
@@ -228,7 +225,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?attr/colorPrimaryVariant"
-                    android:text="Victim info"
+                    android:text="@string/victim_info"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                     app:layout_constraintBottom_toBottomOf="@+id/current_emergency_address"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -241,7 +238,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="?attr/colorPrimaryVariant"
-                    android:text="Description"
+                    android:text="@string/description"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                     app:layout_constraintBottom_toBottomOf="@+id/current_emergency_victim_state"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -257,8 +254,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Shift"
             android:textSize="18sp"
+            android:text="@string/shift"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
