--- a/app/src/main/res/layout-sw600dp/activity_paramedic.xml
+++ b/app/src/main/res/layout-sw600dp/activity_paramedic.xml
@@ -72,6 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        app:headerLayout="@layout/paramedic_navigation_drawer_header"
         app:menu="@menu/paramedic_navigation_drawer" />
 
 
