--- a/app/src/main/res/layout/fragment_facilities_map.xml
+++ b/app/src/main/res/layout/fragment_facilities_map.xml
@@ -26,7 +26,7 @@
             android:textAlignment="center"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:text="This is a map of facilities near you"
+            android:text="@string/this_is_a_map_of_facilities_near_you"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
             android:background="@color/white"
             android:drawableStart="@drawable/ic_baseline_local_hospital_40"
             android:padding="5dp"
-            android:text="Hospital"
+            android:text="@string/hospital"
             android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@id/police_checkbox"
             app:layout_constraintTop_toBottomOf="@id/facilities_headline" />
@@ -52,7 +52,7 @@
             android:background="@color/white"
             android:drawableStart="@drawable/ic_baseline_local_police_40"
             android:padding="5dp"
-            android:text="Police"
+            android:text="@string/police"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
             android:background="@color/white"
             android:drawableStart="@drawable/ic_baseline_local_fire_department_40"
             android:padding="5dp"
-            android:text="Fire"
+            android:text="@string/fire_department"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@id/police_checkbox"
             app:layout_constraintTop_toBottomOf="@id/facilities_headline" />
