--- a/app/src/main/res/layout/fragment_paramedic_screen.xml
+++ b/app/src/main/res/layout/fragment_paramedic_screen.xml
@@ -97,6 +97,9 @@
             app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -133,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:padding="3dp"
-                    android:text="Car accident"
+                    android:text=" "
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_type"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_label" />
@@ -154,7 +157,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="00:00"
+                    android:text=" "
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_time"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_type" />
@@ -175,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="ul. Złota 42, 00-001 Warszawa"
+                    android:text=" "
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_address"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_time" />
@@ -196,7 +199,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="3 People"
+                    android:text=" "
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_victims"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_address_text" />
@@ -217,7 +220,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="Breathing, Not conscious"
+                    android:text=" "
                     android:textSize="16sp"
                     app:layout_constraintStart_toEndOf="@id/current_emergency_victim_state"
                     app:layout_constraintTop_toBottomOf="@id/current_emergency_victims_text" />
@@ -246,6 +249,7 @@
                     app:layout_constraintStart_toEndOf="@+id/show_victim_info_button"
                     app:layout_constraintTop_toBottomOf="@+id/current_emergency_victims_state_text" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+            </ScrollView>
 
         </androidx.cardview.widget.CardView>
 
@@ -255,7 +259,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:textSize="18sp"
-            android:text="Shift"
+            android:text="@string/shift"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
