--- a/app/src/main/res/layout-sw600dp-night/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout-sw600dp-night/fragment_paramedic_call_for_support.xml
@@ -107,11 +107,11 @@
         app:layout_constraintTop_toBottomOf="@+id/locationInput">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/callButton"
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Call"
+            android:text="@string/call"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +123,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/button"
+            android:layout_toRightOf="@id/callButton"
             android:text="@string/incident_cancel_button"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
