--- a/app/src/main/res/layout-sw600dp/fragment_paramedic_call_for_support.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_paramedic_call_for_support.xml
@@ -111,7 +111,7 @@
             style="@style/Widget.Material3.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Call"
+            android:text="@string/call"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
